# clean-grocery-bot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  deploy.sh  dietary_preference_config.json  mkdocs.yml  pyproject.toml  tox.ini
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
.plans/: dietary_preference_config.json  implementation_plan.md  requirements.md
docs/: getting-started.md  index.md  modules.md
src/clean_grocery_bot/: __init__.py  ai_ranker.py  config_loader.py  food_search.py  image_utils.py  lambda_handler.py  models.py  pre_filter.py  security.py
tests/: test_ai_ranker.py  test_config_loader.py  test_foo.py  test_food_search.py  test_image_utils.py  test_lambda_handler.py  test_pre_filter.py  test_security.py
