[project]
name = "clean-grocery-bot"
version = "0.0.1"
description = "A serverless Telegram chatbot that helps you make cleaner food choices while grocery shopping. Search by product category and get AI-powered recommendations ranked by ingredient cleanliness — avoiding seed oils, artificial additives, and ultra-processed foods — based on your own configurable dietary preferences."
authors = [{name = "Stevin Wilson", email = "stevinwilson@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic>=2.10",
    "httpx>=0.28",
    "boto3>=1.35",
    "tenacity>=9.0",
]

[project.urls]
Repository = "https://github.com/stevin-wilson/clean-grocery-bot"
Documentation = "https://stevin-wilson.github.io/clean-grocery-bot/"

[dependency-groups]
dev = [
    "ruff>=0.9.6",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "deptry>=0.22.0",
    "pyright>=1.1.382",
    "pre-commit>=4.0.0",
    "tox>=4.11.1",
    "tox-uv>=1.13.0",
    "respx>=0.22.0",
    "boto3-stubs[bedrock-runtime,ssm]>=1.35",
]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.2.7",
    "mkdocstrings[python]>=0.26.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clean_grocery_bot"]

[tool.pyright]
include = ["src/clean_grocery_bot"]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src/clean_grocery_bot"]
